Align toolbar with other elements on mobile and prevent viewer from overlapping page

--- a/modules/bim/app/assets/stylesheets/bim/ifc_viewer/toolbar.sass
+++ b/modules/bim/app/assets/stylesheets/bim/ifc_viewer/toolbar.sass
@@ -46,6 +46,9 @@
 // -------------------------- MOBILE specific --------------------------
 
 @media only screen and (max-width: 679px)
+  .ifc-model-viewer--toolbar-container
+    padding-right: 15px
+
   .ifc-model-viewer--focus-warning,
   .ifc-model-viewer--toolbar-container
     .fa-male,
